--- a/layouts/partials/widgets/alumni-table.html
+++ b/layouts/partials/widgets/alumni-table.html
@@ -1,13 +1,28 @@
-{{ $ := .root }} 
-{{ $page := .page }} 
-{{ $authors := (where site.Pages "Section" "authors") }} 
-{{ $alumni := where $authors ".Params.user_groups" "intersect" (slice "Member Alumni") }}
+{{/* Alumni Table Widget */}}
+
+{{/* Initialise */}}
+{{ $ := .root }}
+{{ $page := .page }}
 
 <div class="row justify-content-center">
+  {{ with $page.Title }}
   <div class="col-md-12 section-heading text-center pb-3">
-    <h1>{{ $page.Title }}</h1>
+    <h1>{{ . | markdownify | emojify }}</h1>
+    {{ if $page.Params.subtitle }}<p>{{ $page.Params.subtitle | markdownify | emojify }}</p>{{ end }}
   </div>
+  {{ end }}
 
+  {{ with $page.Content }}
+  <div class="col-md-12">
+    {{ . }}
+  </div>
+  {{ end }}
+
+  {{ $authors := (where site.Pages "Section" "authors") }}
+  {{ $selected_authors := where $authors ".Params.user_groups" "intersect" $page.Params.content.user_groups }}
+  {{ $alumni := where $selected_authors ".Params.member_end" "!=" nil }}
+
+  {{ if $alumni | and (gt (len $page.Params.content.user_groups) 1) }}
   <table class="table table-sm">
     <thead class="bg-tudelft-primary text-white">
       <tr>
@@ -18,7 +33,8 @@
       </tr>
     </thead>
     <tbody>
-      {{ range (sort $alumni ".Params.member_end" "desc") }}
+      {{ range ($alumni.GroupByParam "member_end" "desc") }}
+      {{ range .Pages.ByTitle }}
       <tr>
         <td scope="row">
           <a href="{{ .Permalink }}">{{ .Title }}</a>
@@ -26,19 +42,17 @@
         <td>{{ .Params.member_start }} - {{ .Params.member_end }}</td>
         <td>{{ .Params.role }}</td>
         <td>
-          {{ range $i, $org := .Params.organizations}} 
-            {{ if $i }} 
-              | 
+          {{ range $i, $org := .Params.organizations}}
+            {{ if gt $i 0 }} | {{ end }}
+            {{ with $org }}
+            {{ with .url }}<a href="{{.}}" target="_blank">{{ end }}{{ .name }}{{ if .url }}</a>{{ end }}{{ with .country }} ({{.}}){{ end }}
             {{ end }}
-            {{ if $org.url }}
-              <a href="{{ $org.url }}" target="_blank">{{ $org.name }}</a>
-            {{ else }} 
-              {{ $org.name }} 
-            {{ end }} 
           {{ end }}
         </td>
       </tr>
       {{ end }}
+      {{ end }}
     </tbody>
   </table>
+  {{ end }}
 </div>
