Rename CSS class

--- a/layouts/partials/widgets/alumni-table.html
+++ b/layouts/partials/widgets/alumni-table.html
@@ -24,7 +24,7 @@
 
   {{ if $alumni | and (gt (len $page.Params.content.user_groups) 1) }}
   <table class="table table-sm">
-    <thead class="bg-tudelft-primary text-white">
+    <thead class="bg-table-primary text-white">
       <tr>
         <th scope="col">Name</th>
         <th scope="col">Period</th>
