Add project template

--- a/layouts/partials/li_project.html
+++ b/layouts/partials/li_project.html
@@ -13,7 +13,7 @@
   {{ $summary = $item.Summary }}
 {{ end }}
 
-<a href="/" class="card-simple container link-card">
+<a href="{{ $item.RelPermalink }}" class="card-simple container link-card">
   <!-- <div class="card-simple container"> -->
     <div class="row">
       <div class="col-2" style="margin: auto 0;">
