Add brackets to specify project attributes as lists

--- a/layouts/research_lines/single.html
+++ b/layouts/research_lines/single.html
@@ -2,7 +2,7 @@
 
 <article class="article article-project">
 
-  <div class="warp" style="background-color: #f5f5f5;">
+  <div class="warp research-line-header">
     <div class="universal-wrapper pl-2 pr-2">
 
       {{ partial "research_line_page_header.html" . }}
