--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -20,6 +20,16 @@ table {
   background-color: $sta-primary;
 }
 
+thead {
+  background-color: $sta-primary;
+  color: white;
+}
+
+.research-line-header {
+  background-color: #f5f5f5;
+}
+
+// card li-element for projects, events, etc.
 .link-card {
   display: block; 
   text-decoration: none; 
