Add about, organization, and statistics

--- a/layouts/partials/widgets/alumni-table.html
+++ b/layouts/partials/widgets/alumni-table.html
@@ -1,6 +1,5 @@
-{{/* Alumni Table Widget */}}
+{{/* Widget displaying SERG alumni dynamically generated from the authors taxonomy */}}
 
-{{/* Initialise */}}
 {{ $ := .root }}
 {{ $page := .page }}
 
