--- a/layouts/partials/widgets/members.html
+++ b/layouts/partials/widgets/members.html
@@ -1,6 +1,5 @@
-{{/* Members Widget */}}
+{{/* Members widget that displays every item in the authors taxonomy */}}
 
-{{/* Initialise */}}
 {{ $ := .root }}
 {{ $page := .page }}
 {{ $show_social := $page.Params.design.show_social | default false }}
