Add additional research line tabs and templates

--- a/layouts/partials/li_project.html
+++ b/layouts/partials/li_project.html
@@ -1,3 +1,5 @@
+{{/* Template for individual list items of the project taxonomy */}}
+
 {{ $item := . }}
 
 {{/* Dynamic view adjusts to content type. */}}
