--- a/layouts/partials/rl_projects_tab.html
+++ b/layouts/partials/rl_projects_tab.html
@@ -1,3 +1,5 @@
+{{/* Template for the research line projects tab */}}
+
 {{ $page := . }}
 {{ $show_social := $page.Params.design.show_social | default true }}
 {{ $show_interests := $page.Params.design.show_interests | default false }}
