--- a/layouts/partials/research_line_page_header.html
+++ b/layouts/partials/research_line_page_header.html
@@ -1,3 +1,5 @@
+{{/* Partial for the research line single page header */}}
+
 {{ $page := . }}
 {{ $featured := (.Resources.ByType "image").GetMatch "*featured*" }}
 {{ $anchor := $page.Params.image.focal_point | default "Smart" }}
