--- a/layouts/partials/rl_vacancies_tab.html
+++ b/layouts/partials/rl_vacancies_tab.html
@@ -1,5 +1,9 @@
-{{/* Template for the research line projects tab */}}
+{{/* Template for the research line vacancies tab */}}
 
 {{/* To be added once tools are added */}}
 
 <h2>Vacancies</h2>
+
+{{ $pages := (where .Pages "Section" "vacancies")}}
+
+{{ partial "li_pages.html" $pages }}
