--- a/layouts/research_lines/list.html
+++ b/layouts/research_lines/list.html
@@ -28,7 +28,7 @@
                 <a class="nav-link" id="publications-tab" data-toggle="tab" href="#publications" role="tab" aria-controls="publications" aria-selected="false">Publications</a>
               </li>
               <li class="nav-item" role="presentation">
-                <a class="nav-link" id="thesis-projects-tab" data-toggle="tab" href="#thesis-projects" role="tab" aria-controls="thesis-projects" aria-selected="false">Thesis-projects</a>
+                <a class="nav-link" id="thesis-projects-tab" data-toggle="tab" href="#thesis-projects" role="tab" aria-controls="thesis-projects" aria-selected="false">Thesis</a>
               </li>
               <li class="nav-item" role="presentation">
                 <a class="nav-link" id="vacancies-tab" data-toggle="tab" href="#vacancies" role="tab" aria-controls="vacancies" aria-selected="false">Vacancies</a>
