--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -29,7 +29,7 @@ thead {
   background-color: #f5f5f5;
 }
 
-// card li-element for projects, events, etc.
+// card li-element for projects, events, and other card-style content.
 .link-card {
   display: block; 
   text-decoration: none; 
