Add support for events (#3)
* Add index for the events
* Add draft layouts for the events
* Fix date parameters in event templates
* Add calendar link to the event template
* Add calendar output to all events
* Add event list view with link

Co-authored-by: Patrik Barták <p.bartak@student.tudelft.nl>

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -20,6 +20,10 @@ table {
   background-color: $sta-primary;
 }
 
+hr {
+  background: #ccc;
+}
+
 thead {
   background-color: $sta-primary;
   color: white;
