Rename certain content types to be more consistent

--- a/layouts/partials/rl_events_tab.html
+++ b/layouts/partials/rl_events_tab.html
@@ -4,6 +4,6 @@
 
 <h2>Events</h2>
 
-{{ $pages := (where .Pages "Section" "events")}}
+{{ $pages := (where .Pages "Section" "event")}}
 
 {{ partial "li_pages.html" $pages }}
