--- a/layouts/partials/rl_publications_tab.html
+++ b/layouts/partials/rl_publications_tab.html
@@ -4,6 +4,6 @@
 
 <h2>Publications</h2>
 
-{{ $pages := (where .Pages "Section" "publications")}}
+{{ $pages := (where .Pages "Section" "publication")}}
 
 {{ partial "li_pages.html" $pages }}
