--- a/layouts/partials/rl_thesis_projects_tab.html
+++ b/layouts/partials/rl_thesis_projects_tab.html
@@ -4,6 +4,6 @@
 
 <h2>Thesis Projects</h2>
 
-{{ $pages := (where .Pages "Section" "thesis-projects")}}
+{{ $pages := (where .Pages "Section" "thesis-project")}}
 
 {{ partial "li_pages.html" $pages }}
