--- a/layouts/partials/rl_tools_tab.html
+++ b/layouts/partials/rl_tools_tab.html
@@ -4,6 +4,6 @@
 
 <h2>Tools</h2>
 
-{{ $pages := (where .Pages "Section" "tools")}}
+{{ $pages := (where .Pages "Section" "tool")}}
 
 {{ partial "li_pages.html" $pages }}
