--- a/layouts/partials/rl_vacancies_tab.html
+++ b/layouts/partials/rl_vacancies_tab.html
@@ -4,6 +4,6 @@
 
 <h2>Vacancies</h2>
 
-{{ $pages := (where .Pages "Section" "vacancies")}}
+{{ $pages := (where .Pages "Section" "vacancy")}}
 
 {{ partial "li_pages.html" $pages }}
