--- a/layouts/vacancies/single.html
+++ b/layouts/vacancies/single.html
@@ -30,15 +30,15 @@
       <div class="col-md-1"></div>
     </div>
     {{ end }}
-    {{ if .Params.contact }}
+    {{ if .Params.contacts }}
     <div class="row">
       <div class="col-md-1"></div>
         <div class="col-md-10">
           <div class="row">
             <div class="col-12 col-md-4 pub-row-heading">Contact</div>
             <div class="col-12 col-md-8">
-              {{ $len := .Params.contact }}
-              {{ range $idx, $e := .Params.contact }}
+              {{ $len := .Params.contacts }}
+              {{ range $idx, $e := .Params.contacts }}
                 <a href="mailto:{{ $e }}">{{ $e }}</a>
                 {{- if (ne (add $idx 1) (len $len)) -}}
                 , 
