--- a/layouts/partials/li_project.html
+++ b/layouts/partials/li_project.html
@@ -1,9 +1,14 @@
-{{/* Template for individual list items of the project taxonomy */}}
-
 {{ $item := . }}
 
 {{/* Dynamic view adjusts to content type. */}}
 {{ $has_attachments := partial "functions/has_attachments" . }}
+
+{{ $link := $item.RelPermalink }}
+{{ $target := "" }}
+{{ if $item.Params.external_link }}
+  {{ $link = $item.Params.external_link }}
+  {{ $target = "target=\"_blank\" rel=\"noopener\"" }}
+{{ end }}
 
 {{/* Get summary. */}}
 {{ $summary := "" }}
@@ -15,73 +20,37 @@
   {{ $summary = $item.Summary }}
 {{ end }}
 
-<a href="{{ $item.RelPermalink }}" class="card-simple container link-card">
-    <div class="row">
-      <div class="col-2" style="margin: auto 0;">
-        {{ with $item.Params.project_end | default "present" }}
-        <div class="mb-2 mt-2">
-          <p class="text-muted text-center m-0" style="line-height: 30px;">{{ $item.Params.project_start }} <br> • <br> {{ . }}</p>
-        </div>
-        {{ end }}
-      </div>
-      <div class="col border-left">
-        <div class="section-subheading article-title mb-0 mt-1">
-            {{ $item.Params.Name }}
-        </div>
-        <p class="mb-2 mt-0">
-            {{ $item.Title }}
-        </p>
-      
-        {{ with $summary }}
-          <div class="article-style">
-            <p>{{.}}</p>
-          </div>
-        {{ end }}
-        
-        {{ $research_lines := (where site.Pages "Section" "research_lines") }}
-        {{ $selected_research_lines := where $research_lines ".Params.title" "intersect" $item.Params.research_lines }}
-  
-        {{ range $selected_research_lines }}
-        <a class="btn btn-outline-primary btn-page-header btn-sm" href="{{ . }}" target="_blank" rel="noopener">
-          {{ i18n "btn_pdf" }}
-        </a>
-        {{ end }}
-  
-        
-  
-        {{ $authors := (where site.Pages "Section" "authors") }}
-        {{ $led_by := where $authors ".Params.title" "in" .Params.responsible_authors }}
-        <p class="text-muted italics small m-0"><x>
-          Led by: 
-          {{ range $i, $e := $led_by }}
-            {{- if and (gt $i 0) (lt $i (sub (len $led_by) 1)) -}},&nbsp{{- end -}} 
-            {{- if and (eq $i (sub (len $led_by) 1)) (gt (len $led_by) 1) -}}&nbspand&nbsp{{- end -}}
-            {{- $e.Title -}}
-          {{- end -}} 
-        </x></p>
+<div class="card-simple view-card">
+  {{ partial "project_card_metadata" (dict "page" $item "is_list" 1) }}
 
-        {{ $funding := .Params.funding }}
-        <p class="text-muted italics small mb-2"><x>
-          Funding:
-          {{ range $i, $e := $funding }}
-            {{- if and (gt $i 0) (lt $i (sub (len $funding) 1)) -}},&nbsp{{- end -}} 
-            {{- if and (eq $i (sub (len $funding) 1)) (gt (len $funding) 1) -}}&nbspand&nbsp{{- end -}}
-            {{- $e -}}
-          {{- end -}} 
-        </x></p>
-    
-      </div>
-  
-        <!-- For now, projects do not need icons -->
-        <!-- {{ $resource := ($item.Resources.ByType "image").GetMatch "*logo*" }}
-        {{ $anchor := $item.Params.image.focal_point | default "Smart" }}
-        {{ with $resource }}
-        {{ $image := .Fill (printf "08x455 %s" $anchor) }}
-        <div class="col-3 border-left">
-            <div class="img-hover-zoom h-100 w-100 d-block">
-              <img src="{{ $image.RelPermalink }}" class="article-banner h-100 w-100" style="object-fit: cover;" alt="{{ $item.Title }}" loading="lazy">
-            </div>
-        </div>
-        {{end}} -->
+  {{ $resource := ($item.Resources.ByType "image").GetMatch "*featured*" }}
+  {{ $anchor := $item.Params.image.focal_point | default "Smart" }}
+  {{ with $resource }}
+  {{ $image := .Fill (printf "808x455 webp %s" $anchor) }}
+  <a href="{{ $link }}" {{ $target | safeHTMLAttr }}>
+    <div class="img-hover-zoom">
+      <img src="{{ $image.RelPermalink }}" height="{{ $image.Height }}" width="{{ $image.Width }}"
+           class="article-banner" alt="{{ $item.Title }}" loading="lazy">
     </div>
-</a>
+  </a>
+  {{end}}
+
+  <div class="section-subheading article-title mb-1">
+    <a href="{{ $link }}" {{ $target | safeHTMLAttr }}>{{ $item.Title }}</a>
+  </div>
+
+  {{ with $summary }}
+  <a href="{{ $link }}" {{ $target | safeHTMLAttr }} class="summary-link">
+    <div class="article-style">
+      <p>{{.}}</p>
+    </div>
+  </a>
+  {{ end }}
+
+  {{ if $has_attachments }}
+  <div class="btn-links">
+    {{ partial "page_links" (dict "page" $item "is_list" 1) }}
+  </div>
+  {{ end }}
+
+</div>
