Fix metadata on different card types

--- a/layouts/partials/rl_projects_tab.html
+++ b/layouts/partials/rl_projects_tab.html
@@ -7,6 +7,6 @@
 {{ if ge $talks_len 1 }}
   <h2>Projects</h2>
   {{ range $items }}
-  {{ partial "li_project" . }}
+  {{ partial "li_card" . }}
   {{ end }}
 {{ end }}
