--- a/layouts/partials/views/card-simple.html
+++ b/layouts/partials/views/card-simple.html
@@ -1,4 +1,4 @@
-{{ $item := . }}
+{{ $item := .item }}
 
 {{/* Dynamic view adjusts to content type. */}}
 {{ $has_attachments := partial "functions/has_attachments" . }}
@@ -21,7 +21,23 @@
 {{ end }}
 
 <div class="card-simple view-card">
-  {{ partial "project_card_metadata" (dict "page" $item "is_list" 1) }}
+
+  {{ if eq $item.Type "event" }}
+  <div class="article-metadata">
+    {{ if $item.Params.authors }}
+    <div>
+      {{ partial "page_metadata_authors" $item }}
+    </div>
+    {{ end }}
+    <span>
+      {{ partial "functions/get_event_dates" $item }}
+    </span>
+    {{ with $item.Params.location }}
+    <span class="middot-divider"></span>
+    <span>{{ . }}</span>
+    {{ end }}
+  </div>
+  {{ end }}
 
   {{ $resource := ($item.Resources.ByType "image").GetMatch "*featured*" }}
   {{ $anchor := $item.Params.image.focal_point | default "Smart" }}
@@ -35,22 +51,31 @@
   </a>
   {{end}}
 
-  <div class="section-subheading article-title mb-1">
-    <a href="{{ $link }}" {{ $target | safeHTMLAttr }}>{{ $item.Title }}</a>
-  </div>
+  {{ if eq $item.Type "project" }}
+    <div class="section-subheading article-title mb-1 mt-1">
+      <a href="{{ $link }}" {{ $target | safeHTMLAttr }}>{{ $item.Params.name }}</a>
+    </div>
+    <h6 class="text-dark mb-1 mt-1">
+      <a class="text-dark" href="{{ $link }}" {{ $target | safeHTMLAttr }}>{{ $item.Title }}</a>
+    </h6>
+  {{ else }}
+    <div class="section-subheading article-title mb-1 mt-1">
+      <a href="{{ $link }}" {{ $target | safeHTMLAttr }}>{{ $item.Title }}</a>
+    </div>
+  {{ end }}
 
-  {{ with $summary }}
+  <!-- {{ with $summary }}
   <a href="{{ $link }}" {{ $target | safeHTMLAttr }} class="summary-link">
     <div class="article-style">
       <p>{{.}}</p>
     </div>
   </a>
-  {{ end }}
+  {{ end }} -->
 
-  {{ if $has_attachments }}
+  <!-- {{ if $has_attachments }}
   <div class="btn-links">
     {{ partial "page_links" (dict "page" $item "is_list" 1) }}
   </div>
-  {{ end }}
+  {{ end }} -->
 
 </div>
