--- a/layouts/partials/views/card.html
+++ b/layouts/partials/views/card.html
@@ -22,6 +22,25 @@
 
 <div class="card-simple view-card">
 
+  {{ if eq $item.Type "event" }}
+  <div class="article-metadata">
+    {{ if $item.Params.authors }}
+    <div>
+      {{ partial "page_metadata_authors" $item }}
+    </div>
+    {{ end }}
+    <span>
+      {{ partial "functions/get_event_dates" $item }}
+    </span>
+    {{ with $item.Params.location }}
+    <span class="middot-divider"></span>
+    <span>{{ . }}</span>
+    {{ end }}
+  </div>
+  {{ else }}
+    {{ partial "page_metadata" (dict "page" $item "is_list" 1) }}
+  {{ end }}
+
   {{ $resource := ($item.Resources.ByType "image").GetMatch "*featured*" }}
   {{ $anchor := $item.Params.image.focal_point | default "Smart" }}
   {{ with $resource }}
@@ -34,9 +53,18 @@
   </a>
   {{end}}
 
-  <div class="section-subheading mb-2 mt-2">
-    <a href="{{ $link }}" {{ $target | safeHTMLAttr }}>{{ $item.Title }}</a>
-  </div>
+  {{ if eq $item.Type "project" }}
+    <div class="section-subheading article-title mb-1 mt-1">
+      <a href="{{ $link }}" {{ $target | safeHTMLAttr }}>{{ $item.Params.name }}</a>
+    </div>
+    <h6 class="text-dark mb-1 mt-1">
+      <a class="text-dark" href="{{ $link }}" {{ $target | safeHTMLAttr }}>{{ $item.Title }}</a>
+    </h6>
+  {{ else }}
+    <div class="section-subheading article-title mb-1 mt-1">
+      <a href="{{ $link }}" {{ $target | safeHTMLAttr }}>{{ $item.Title }}</a>
+    </div>
+  {{ end }}
 
   {{ with $summary }}
   <a href="{{ $link }}" {{ $target | safeHTMLAttr }} class="summary-link">
