--- a/layouts/partials/widgets/custom-portfolio.html
+++ b/layouts/partials/widgets/custom-portfolio.html
@@ -50,7 +50,7 @@
     {{ end }}
   {{ end }}
 
-  <div class="{{ if or $st.Params.content.filter_button (in (slice "masonry" 3) $view) }}isotope projects-container{{end}} {{if in (slice "masonry" 3) $view}}js-layout-masonry{{else}}row js-layout-row{{end}} {{ if eq $view "showcase" }}project-showcase{{end}}">
+  <div class="{{ if or $st.Params.content.filter_button (in (slice "masonry" 3 6) $view) }}isotope projects-container{{end}} {{if in (slice "masonry" 3 6) $view}}js-layout-masonry{{else}}row js-layout-row{{end}} {{ if eq $view "showcase" }}project-showcase{{end}}">
 
     {{ $query := "" }}
     {{ if $st.Params.content.filters.tags }}
@@ -70,7 +70,7 @@
         {{ $tags = $tags | append "featured" }}
       {{ end }}
       {{ $js_tag_classes := delimit (apply (apply $tags "replace" "." " " "-") "printf" "js-id-%s" ".") " " }}
-        {{ if in (slice "masonry" 3) $view }}
+        {{ if in (slice "masonry" 3 6) $view }}
           <div class="project-card project-item isotope-item {{ $js_tag_classes | safeHTMLAttr }}">
         {{else}}
           <div class="col-12 isotope-item {{ $js_tag_classes | safeHTMLAttr }}">
