--- a/layouts/partials/rl_projects_tab.html
+++ b/layouts/partials/rl_projects_tab.html
@@ -1,8 +1,7 @@
 {{/* Template for the research line projects tab */}}
+{{ $page := . }}
 
-{{ $assoc_projects := (where .Pages "Section" "project")}}
-
-{{ $items := where (where site.RegularPages "Type" "project") ".Params.research_lines" "intersect" (slice "ci4se") }}
+{{ $items := where (where site.RegularPages "Type" "project") ".Params.research_lines" "intersect" (slice (path.Base $page.File.Dir)) }}
 {{ $talks_len := len $items }}
 {{ if ge $talks_len 1 }}
   <h2>Projects</h2>
