--- a/layouts/partials/rl_thesis_projects_tab.html
+++ b/layouts/partials/rl_thesis_projects_tab.html
@@ -1,9 +1,11 @@
 {{/* Template for the research line projects tab */}}
+{{ $page := . }}
 
-{{/* To be added once tools are added */}}
-
-<h2>Thesis Projects</h2>
-
-{{ $pages := (where .Pages "Section" "thesis-projects")}}
-
-{{ partial "li_pages.html" $pages }}
+{{ $items := where (where site.RegularPages "Type" "thesis-projects") ".Params.research_lines" "intersect" (slice (path.Base $page.File.Dir)) }}
+{{ $talks_len := len $items }}
+{{ if ge $talks_len 1 }}
+  <h2>Thesis projects</h2>
+  {{ range $items }}
+  {{ partial "li_list" . }}
+  {{ end }}
+{{ end }}
