--- a/layouts/event/list.html
+++ b/layouts/event/list.html
@@ -21,18 +21,18 @@
       {{ range $index, $val := .Data.Pages.GroupByDate "Jan 2006" }}
       <div class="row" id="talk_list">
         <div class="col-lg-2">
-          <h3>{{ $val.Key }}</h3>
+          <h2 class="text-right" style="white-space: pre-wrap;">{{ replace $val.Key " " "\n" }}</h2>
         </div>
-        <div class="col-lg-10 pt-2 pb-2">
+        <div class="col-lg-10 pt-3 pb-3">
 
           {{ range $val.Pages }}
-            {{ if eq $.Params.view 1 }}
-              {{ partial "li_list" . }}
-            {{ else if eq $.Params.view 3 }}
-              {{ partial "li_card" . }}
-            {{ else }}
-              {{ partial "li_compact" . }}
-            {{ end }}
+              {{ if eq $.Params.view 1 }}
+                {{ partial "li_list" . }}
+              {{ else if eq $.Params.view 3 }}
+                {{ partial "li_card" . }}
+              {{ else }}
+                {{ partial "li_compact" . }}
+              {{ end }}
           {{ end }}
 
         </div>
