--- a/layouts/event/single.html
+++ b/layouts/event/single.html
@@ -42,7 +42,6 @@
       </div>
       <div class="col-md-1"></div>
     </div>
-    <div class="d-md-none space-below"></div>
     {{ end }}
 
     {{ if .Params.location }}
@@ -60,12 +59,20 @@
       </div>
       <div class="col-md-1"></div>
     </div>
-    <div class="d-md-none space-below"></div>
     {{ end }}
-
-    {{ with  .OutputFormats.Get "Calendar" -}}
-    <a href="{{ .Permalink | safeURL }}">Add this event to your calendar.</a>
-    {{- end }}
+    <div class="row">
+      <div class="col-md-1"></div>
+      <div class="col-md-10">
+        <div class="row justify-content-center">
+          <div class="ml-3 mr-3 pub-row-heading">
+            {{ with  .OutputFormats.Get "Calendar" -}}
+              <a href="{{ .Permalink | safeURL }}">Add this event to your calendar.</a>
+            {{- end }}
+          </div>
+        </div>
+      </div>
+      <div class="col-md-1"></div>
+    </div>
 
     <div class="space-below"></div>
 
