--- a/layouts/event/list.html
+++ b/layouts/event/list.html
@@ -20,10 +20,10 @@
       {{ $num_groups := (len (.Data.Pages.GroupByDate "Jan 2006")) }}
       {{ range $index, $val := .Data.Pages.GroupByDate "Jan 2006" }}
       <div class="row" id="talk_list">
-        <div class="col-lg-2">
-          <h2 class="text-right" style="white-space: pre-wrap;">{{ replace $val.Key " " "\n" }}</h2>
+        <div class="col-12 col-sm-2">
+          <h2 class="event-large-date">{{ replace $val.Key " " "\n" }}</h2>
         </div>
-        <div class="col-lg-10 pt-3 pb-3">
+        <div class="col-12 col-sm-10 pt-3 pb-3">
 
           {{ range $val.Pages }}
               {{ if eq $.Params.view 1 }}
